fix: adaption for backport from 40 version [DHIS2-14971]